| Summary: | ASTERISK-29397: pjsip: Asterisk isn't tolerant of RFC8760 UASs | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2021-04-15 07:52:02 | Date Closed: | 2021-05-20 14:18:28 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_outbound_authenticator_digest |
| Versions: | 16.17.0 18.3.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | We are not currently tolerant of RFC8760 compliant UASs that send us multiple WWW-Authenticate headers. If they send us one using SHA-256 and a second one using MD5, we fail when we see SHA-256 and don't continue to look for more WWW-Authenticate headers. I have a patch that at least makes us tolerant.
| ||
| Comments: | By: Stanislav Abramenkov (silentindark) 2021-04-19 03:50:56.649-0500 I found similar topic - https://github.com/pjsip/pjproject/pull/2408 . In this topic Alexander Traud tried to solve this problem. By: George Joseph (gjoseph) 2021-04-19 11:11:57.255-0500 [~silentindark] Yep. I've been working with the pjproject guys and it looks like they are going to merge that updated PR so I'll be adjustimg my reviews accordingly. By: Stanislav Abramenkov (silentindark) 2021-04-22 01:25:19.857-0500 Patch (https://github.com/pjsip/pjproject/commit/bdbeb7c4b2b11efc2e59f5dee7aa4360a2bc9fff) was merged in the master branch. By: Friendly Automation (friendly-automation) 2021-05-20 14:18:29.372-0500 Change 15904 merged by Friendly Automation: res_pjsip_outbound_authenticator_digest: Be tolerant of RFC8760 UASs [https://gerrit.asterisk.org/c/asterisk/+/15904|https://gerrit.asterisk.org/c/asterisk/+/15904] By: Friendly Automation (friendly-automation) 2021-05-20 14:21:06.374-0500 Change 15891 merged by Friendly Automation: res_pjsip_outbound_authenticator_digest: Be tolerant of RFC8760 UASs [https://gerrit.asterisk.org/c/asterisk/+/15891|https://gerrit.asterisk.org/c/asterisk/+/15891] By: Friendly Automation (friendly-automation) 2021-05-21 06:54:21.937-0500 Change 15764 merged by George Joseph: res_pjsip_outbound_authenticator_digest: Be tolerant of RFC8760 UASs [https://gerrit.asterisk.org/c/asterisk/+/15764|https://gerrit.asterisk.org/c/asterisk/+/15764] | ||